--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
+    "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
+    "immer": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-screens": "1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.7",
+    "react-navigation-stack": "^1.9.0",
+    "react-navigation-tabs": "^2.5.5",
+    "react-redux": "^7.1.1",
+    "reactotron-react-native": "^4.0.1",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.1",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
